Fix footer z-index.

--- a/spider/assets/css/styles.css
+++ b/spider/assets/css/styles.css
@@ -67,3 +67,7 @@
   padding-bottom: 15px;
 }
 
+footer {
+  z-index: 1000;
+}
+
